app-template/applications/base/myapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: myapp
    app.kubernetes.io/component: myapp
    app.kubernetes.io/instance: myapp
    app.kubernetes.io/name: myapp
    app.kubernetes.io/part-of: myapp-app
  name: myapp
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8000
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8003
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: myapp
    deploymentconfig: myapp
  sessionAffinity: None
  type: ClusterIP
